# flag-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  MACRO_DESIGN.md  Makefile  PERFORMANCE.md  README.md  ROADMAP.md  clippy.toml  kubectl_completion.zsh  kubectl_wrapper.zsh  test_completion.sh  test_dynamic_completions.sh
.github/workflows/: ci.yml  release.yml
.opencode/: opencode.db  opencode.db-shm  opencode.db-wal
benches/: benchmark.rs
examples/: active_help_demo.rs  advanced_flags_demo.rs  benchmark.rs  builder_api_demo.rs  cached_completion_demo.rs  command_macro_demo.rs  dynamic_completion_demo.rs  enhanced_errors_demo.rs  enhanced_help_demo.rs  error_handling_demo.rs  flag_completion_demo.rs  help_formatting_demo.rs  kubectl.rs  lifecycle_hooks_demo.rs  macro_demo.rs  memory_optimization_demo.rs  suggestion_demo.rs  terminal_demo.rs  test_completion.rs  timeout_completion_demo.rs  validator_demo.rs
examples/kubectl_modular/: Cargo.toml
examples/kubectl_modular/src/: main.rs
src/: active_help.rs  color.rs  command.rs  completion.rs  completion_cache.rs  completion_format.rs  completion_format_tests.rs  completion_item.rs  completion_optimized.rs  completion_timeout.rs  context.rs  error.rs  flag.rs  lib.rs  macros.rs  parse_optimized.rs  shell.rs  string_pool.rs  suggestion.rs  terminal.rs  validator.rs
tests/: active_help_integration.rs  completion_edge_cases_test.rs  completion_performance_test.rs  integration_test.rs  lifecycle_hooks_test.rs  shell_completion_basic_test.rs  terminal_integration.rs  validator_integration.rs
(+6 files in other folders)
