[package]
name = "flag-rs"
version = "0.7.2"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
edition = "2021"
description = "A Cobra-inspired CLI framework with dynamic completions"
repository = "https://github.com/navicore/cobra-rs"
keywords = ["cli", "command-line", "parser", "completion", "cobra"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]

[dev-dependencies]

[[example]]
name = "kubectl"
path = "examples/kubectl.rs"

[[example]]
name = "kubectl_modular"
path = "examples/kubectl_modular/src/main.rs"
